Fixed Action Button Spacing

--- a/styles/app.css
+++ b/styles/app.css
@@ -431,10 +431,7 @@ input[type='submit']:hover {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-
-.admin-review-card .head .action-buttons span{
-        padding-left: 10px;
-}   
+  
 
 .restaurant-add {
     /* width: 90%; */
@@ -613,6 +610,10 @@ input[type='submit']:hover {
       outline: none;
   }
 
+  .action-buttons{
+      display: flex;
+      gap: 10px;
+  }
   @keyframes animatetop {
     from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
